# backend/api/scripts/open-api/openapi.yaml
@@ -268,6 +268,10 @@ components:
         _id:
           title: ' Id'
           type: string
+        block:
+          anyOf:
+          - $ref: '#/components/schemas/BlockModel'
+          - type: 'null'
         bookmark:
           default: false
           title: Bookmark
@@ -422,6 +426,10 @@ components:
         _id:
           title: ' Id'
           type: string
+        block:
+          anyOf:
+          - $ref: '#/components/schemas/BlockModel'
+          - type: 'null'
         bookmark:
           default: false
           title: Bookmark
